--- a/README.html
+++ b/README.html
@@ -3,8 +3,8 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
 
-### Hi there 👋
-Welcome to William's Landing Page!
+  <h1>### Hi there 👋</h1>
+  <h2>Welcome to William's Landing Page!</h2>
 </head>
 <body>
 <p>Greetings! I am a student software developer with a passion for creating innovative solutions to any problem put forth to me, and improving my own skills through technology. Outside of work, I enjoy pursuing various interests that help me maintain a healthy work-life balance such as axe throwing and snowboarding.</p>
