--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  
   <body>
     <h1>### Hi there 👋</h1>
-    <h2>Welcome to William's Landing Page!</h2>
+    <h2>Welcome to William's Page!</h2>
     <p>Greetings! I am a student software developer with a passion for creating innovative solutions to any problem put forth to me, and improving my own skills through technology. Outside of work, I enjoy pursuing various interests that help me maintain a healthy work-life balance such as axe throwing and snowboarding.</p>
 
     <h3>Interests</h3>
@@ -20,13 +21,18 @@
       <li>Axe Throwing: I enjoy the sport of axe throwing, which requires focus, precision, and coordination. This activity helps me relieve stress and stay focused.</li>
       <li>Fitness: I believe that physical fitness is essential for maintaining a healthy work-life balance. I enjoy participating in various fitness activities, including weightlifting, running, and snowboarding.</li>
     </ul>
-
-    <footer>
-      <p>Thank you for visiting my landing page. Feel free to reach out to me if you have any questions or if you would like to collaborate on a project related to my professional interests.</p>
-      <p>You can contact me on the following:</p>
-      <ul>
-        <li>Email: williamlbooth12@gmail.com</li>
-      </ul>
-    </footer>
+    <h3>Project Links</h3>
+    <ul>
+      <li><a href="https://github.com/wbooth33/Finance-Calculator.git">Finance Calculator</a></li>
+      <li><a href="https://github.com/wbooth33/Task-Manager.git">Task Manager</a></li>
+      <li><a href="https://github.com/wbooth33/finalCapstone.git">Shoe Inventory</a></li>
   </body>
+
+  <footer>
+    <p>Thank you for visiting my page. Feel free to reach out to me if you have any questions or if you would like to collaborate on a project related to my professional interests.</p>
+    <p>You can contact me on the following:</p>
+    <ul>
+      <li>Email: williamlbooth12@gmail.com</li>
+    </ul>
+  </footer>
 </html>
