--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="https://github.com/wbooth33/Finance-Calculator.git">Finance Calculator</a></li>
       <li><a href="https://github.com/wbooth33/Task-Manager.git">Task Manager</a></li>
       <li><a href="https://github.com/wbooth33/finalCapstone.git">Shoe Inventory</a></li>
+      <li><a href="https://github.com/wbooth33/ebookstore.git">Ebookstore Database</a></li>
     </ul>
   </body>
 
