--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
     <h3>Project Links</h3>
     <ul>
-      <li><a href="https://github.com/wbooth33/Finance-Calculator.git">Finance Calculator</a></li>
+      <li><a href="https://github.com/wbooth33/Flash_Card_App.git">Flash Card Educational Application</a></li>
       <li><a href="https://github.com/wbooth33/Task-Manager.git">Task Manager</a></li>
       <li><a href="https://github.com/wbooth33/finalCapstone.git">Shoe Inventory</a></li>
       <li><a href="https://github.com/wbooth33/ebookstore.git">Ebookstore Database</a></li>
